crates/alder-parse/src/snapshots/alder_parse__type___tests__function_with_app.snap
---
source: crates/alder-parse/src/type_.rs
description: "Code:\n\nMaybe a -> Result e a"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 22,
        },
    },
    value: Lambda {
        from: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 8,
                },
            },
            value: Type {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 1,
                    },
                    end: Position {
                        line: 1,
                        column: 6,
                    },
                },
                name: "Maybe",
                args: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 7,
                            },
                            end: Position {
                                line: 1,
                                column: 8,
                            },
                        },
                        value: Var(
                            "a",
                        ),
                    },
                ],
            },
        },
        to: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 12,
                },
                end: Position {
                    line: 1,
                    column: 22,
                },
            },
            value: Type {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 12,
                    },
                    end: Position {
                        line: 1,
                        column: 18,
                    },
                },
                name: "Result",
                args: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 19,
                            },
                            end: Position {
                                line: 1,
                                column: 20,
                            },
                        },
                        value: Var(
                            "e",
                        ),
                    },
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 21,
                            },
                            end: Position {
                                line: 1,
                                column: 22,
                            },
                        },
                        value: Var(
                            "a",
                        ),
                    },
                ],
            },
        },
    },
}
