crates/alder-parse/src/snapshots/alder_parse__type___tests__lowercase_namespace_type.snap
---
source: crates/alder-parse/src/type_.rs
description: "fiber::MapOptions"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 18,
        },
    },
    value: Named {
        path: Path {
            segments: [
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 1,
                            column: 6,
                        },
                    },
                    value: "fiber",
                },
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 8,
                        },
                        end: Position {
                            line: 1,
                            column: 18,
                        },
                    },
                    value: "MapOptions",
                },
            ],
        },
        args: [],
    },
}
