crates/alder-parse/src/snapshots/alder_parse__type___tests__named_qualified.snap
---
source: crates/alder-parse/src/type_.rs
description: "Option::Foo"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 12,
        },
    },
    value: Named {
        path: Path {
            segments: [
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 1,
                            column: 7,
                        },
                    },
                    value: "Option",
                },
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 9,
                        },
                        end: Position {
                            line: 1,
                            column: 12,
                        },
                    },
                    value: "Foo",
                },
            ],
        },
        args: [],
    },
}
