crates/alder-parse/src/snapshots/alder_parse__type___tests__named_simple.snap
---
source: crates/alder-parse/src/type_.rs
description: User
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 5,
        },
    },
    value: Named {
        path: Path {
            segments: [
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 1,
                            column: 5,
                        },
                    },
                    value: "User",
                },
            ],
        },
        args: [],
    },
}
