crates/alder-parse/src/snapshots/alder_parse__type___tests__named_type_int.snap
---
source: crates/alder-parse/src/type_.rs
description: "Code:\n\nInt"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 4,
        },
    },
    value: Type {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 4,
            },
        },
        name: "Int",
        args: [],
    },
}
