crates/alder-parse/src/snapshots/alder_parse__type___tests__named_type_qualified.snap
---
source: crates/alder-parse/src/type_.rs
description: "Code:\n\nDict.Dict"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 10,
        },
    },
    value: TypeQual {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 10,
            },
        },
        module: "Dict",
        name: "Dict",
        args: [],
    },
}
