crates/alder-parse/src/snapshots/alder_parse__type___tests__namespace_type_rejects_lowercase_member.snap
---
source: crates/alder-parse/src/type_.rs
description: "fiber::map"
---
PathMember(
    1,
    8,
)
