crates/alder-parse/src/snapshots/alder_parse__type___tests__nested_namespace_type.snap
---
source: crates/alder-parse/src/type_.rs
description: "api::models::User[a]"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 21,
        },
    },
    value: Named {
        path: Path {
            segments: [
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 1,
                            column: 4,
                        },
                    },
                    value: "api",
                },
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 6,
                        },
                        end: Position {
                            line: 1,
                            column: 12,
                        },
                    },
                    value: "models",
                },
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 14,
                        },
                        end: Position {
                            line: 1,
                            column: 18,
                        },
                    },
                    value: "User",
                },
            ],
        },
        args: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 19,
                    },
                    end: Position {
                        line: 1,
                        column: 20,
                    },
                },
                value: Var {
                    name: "a",
                    args: [],
                },
            },
        ],
    },
}
